--- a/css/main.css
+++ b/css/main.css
@@ -518,8 +518,8 @@ body {
 
 .modal {
   position: absolute;
-  min-height: 581px;
-  width: 528px;
+  height: 100vh;
+  width: 100vw;
   padding: 40px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -528,6 +528,18 @@ body {
   transition: transform 300ms;
   transform: translate(-50%, -50%) scale(1) rotate(0);
   background-color: var(--primary-bg-color);
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+    height: 609px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .close-btn-icon {
@@ -569,12 +581,8 @@ body {
   color: var(--title-text-color);
 }
 
-.modal-field {
-  margin-bottom: 10px;
-}
-
 .modal-input {
-  width: 448px;
+  width: 100%;
   height: 40px;
   left: 576px;
   top: 314px;
@@ -636,15 +644,15 @@ body {
 }
 
 .modal-label {
-  font-size: 12px;
-  line-height: 1.16;
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.01em;
   color: var(--primary-text-color);
 }
 
 .modal-comment {
   display: block;
-  width: 448px;
+  width: 100%;
   height: 120px;
   resize: none;
   left: 576px;
@@ -674,10 +682,15 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
+}
+@media screen and (max-width: 479px) {
+  .check-text {
+    flex-wrap: wrap;
+  }
 }
 .check-text::before {
   content: "";
