--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -14,8 +14,8 @@
 
 .modal {
   position: absolute;
-  min-height: 581px;
-  width: 528px;
+  height: 100vh;
+  width: 100vw;
   padding: 40px;
   box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%),
     0px 2px 1px rgb(0 0 0 / 20%);
@@ -26,6 +26,15 @@
   transform: translate(-50%, -50%) scale(1) rotate(0);
 
   background-color: var(--primary-bg-color);
+
+  @media screen and (min-width: 480px) {
+    width: 450px;
+    height: 609px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .close-btn-icon {
@@ -69,12 +78,12 @@
   color: var(--title-text-color);
 }
 
-.modal-field {
-  margin-bottom: 10px;
-}
+// .modal-field {
+//   margin-bottom: 10px;
+// }
 
 .modal-input {
-  width: 448px;
+  width: 100%;
   height: 40px;
   left: 576px;
   top: 314px;
@@ -146,8 +155,8 @@
 }
 
 .modal-label {
-  font-size: 12px;
-  line-height: 1.16;
+  font-size: 14px;
+  line-height: 1.14;
 
   letter-spacing: 0.01em;
 
@@ -156,7 +165,7 @@
 
 .modal-comment {
   display: block;
-  width: 448px;
+  width: 100%;
   height: 120px;
   resize: none;
   left: 576px;
@@ -186,13 +195,18 @@
 .check-text {
   position: relative;
   display: flex;
+
   align-items: center;
   justify-content: center;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
 
   color: var(--primary-text-color);
+
+  @media screen and (max-width: 479px) {
+    flex-wrap: wrap;
+  }
 
   &::before {
     content: "";
